# Atlas-ai-personal-timeline-

./: 01_PRD.md  02_UX_AND_APP_FLOW.md  03_TRD.md  04_DATABASE_DESIGN.md  05_DESIGN_SYSTEM.md  06_IMPLEMENTATION_PLAN.md  07_ARCHITECTURE_BIBLE.md  AI_HANDOFF.md  ARCHITECTURE.md  ATLAS_DOCUMENT_LIST_AND_ROADMAP.md  ATLAS_MASTER_ROADMAP_AND_PROMPT.md  ATLAS_RESEARCH_PROMPTS.md  DECISIONS.md  IMPLEMENTATION_REPORT.md  MODEL_DECISIONS.md  PROJECT_CONTEXT.md  README.md  STITCH_PROMPTS.md  TASKS.md
atlas-app/: package-lock.json  package.json
atlas-app/src/: App.css  App.tsx
atlas-app/src-tauri/: Cargo.toml  tauri.conf.json
atlas-app/src-tauri/src/: agentic.rs  audio.rs  embed.rs  errors.rs  lib.rs  telegram.rs  vault.rs  watcher.rs
atlas-app/src-tauri/src/graph/: mod.rs  persona_engine.rs  queries.rs  schema.rs
atlas-app/src/components/: AvatarFace.tsx  ChatPanel.tsx  FirstRunShowcase.tsx  NetworkGraph.tsx  PersonalityCloner.tsx  SettingsPage.tsx  SetupPage.tsx  TimelineView.tsx  UnlockPage.tsx  VoiceBar.tsx
atlas-app/src/utils/: inferAvatarState.ts
docs/: BEHAVIORAL_EVIDENCE_ENGINE.md
